# KernelForge

./: .gitignore  AGENTS.md  CLAUDE.md  READ.md  README.md  conftest.py  flake.nix  package-lock.json  package.json  pyproject.toml
.pi/extensions/: generate-kernel.ts  run-kernelforge-workflow.ts  run-semantic-check.ts  search-triton-docs.ts  validate-kernel.ts  write-ledger.ts
apps/: README.md
apps/agent/: README.md  package.json
benchmarks/KAGBench/: README.md  kagbench.jsonl
compiler/: Makefile  README.md  __init__.py  triton.l  triton.y  triton_compiler  triton_lexer.py  triton_parser.py  triton_scanner  triton_validator.py
compiler/report/: lib.typ  main.typ
docs/: architecture.md  checklist.md  compiler_oral_exam_answers.md  compiler_oral_exam_questions-1.docx  data-and-runs.md  evaluate.md  ledger_schema.md  onboarding.md  respuestas_examen_oral.md
grammar/: gbnf_viewer.html  gemma_thinking_demo.lark  triton.gbnf  triton.lark
notebooks/: benchmark.py  compare_models.py  eval_results.py  grammar.py  run_eval_colab.py  tritonbench.py  tritonbench_test.py
notebooks/benchmark/: __init__.py  llm_inference.py  llm_models.json  llm_results.py  tritonbench.py
notebooks/data/: deepseek-v4-pro-t-simple-max4000-temp0.jsonl  gpt54-t-simple-max8500-lowreason-temp0.jsonl  modal-gemma4-e4b-t-simple-max8000-temp0.jsonl
poster/: README.md  poster.tex
scripts/: final_stats.py  generate_kernel.py  modal_eval.py  modal_kagbench_eval.py  modal_vllm.py  run_semantic_check.py
tests/: README.md  test_llm_inference_manifest.py  test_semantic_checker.py
(+304 files in other folders)
