[project]
name = "kernelforge"
version = "0.1.0"
description = "Research workspace for constrained Triton kernel generation and evaluation."
requires-python = ">=3.11"
dependencies = [
    "altair>=6.1.0",
    "basedpyright>=1.39.4",
    "ipykernel>=7.2.0",
    "marimo>=0.23.6",
    "modal>=1.4.3",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "ruff>=0.15.13",
]

[project.optional-dependencies]
rocm = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "triton-rocm>=3.7.0",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-rocm", extra = "rocm" } ]
torchvision = [ { index = "pytorch-rocm", extra = "rocm" } ]
triton-rocm = [ { index = "pytorch-rocm", extra = "rocm" } ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernelforge"]

[tool.ruff]
line-length = 100

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["src"]
exclude = ["vendor", ".venv", ".direnv", "notebooks"]
reportPrivateImportUsage = false
